[MASTER] Fixing logo position on mobile device. Replacing logo jpg -> png

--- a/css/style.css
+++ b/css/style.css
@@ -1462,3 +1462,7 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+
+.col-mgin-auto {
+  margin: 0 auto;
+}
